src/objects/BHAT_Activity_Reminder_Log__c.object
<CustomObject>
    <description>BHAT</description>
    <fields>
        <fullName>Email_Count__c</fullName>
        <label>Email Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_For_30_Day_Sent_On__c</fullName>
        <label>Email For 30 Day Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_For_60_Day_Sent_On__c</fullName>
        <label>Email For 60 Day Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_For_90_Day_Sent_On__c</fullName>
        <label>Email For 90 Day Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BHAT_Activity_Reminder_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BHAT Activity Reminder Log</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>BHAT Activity Reminder Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BHAT Activity Reminder Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>